--- a/css/main.css
+++ b/css/main.css
@@ -1630,7 +1630,8 @@ img {
 .container-map {
   margin: 20px 70px;
 }
-.contact__map-link {
+
+/* .contact__map-link {
   display: block;
   font-size: 20px;
 }
@@ -1638,7 +1639,7 @@ img {
   display: block;
   margin: 0 auto;
   padding: 20px;
-}
+} */
 
 .section-footer {
   padding-top: 60px;
