--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,24 +1,25 @@
-@import "./base/common";
-@import "./base/container";
-@import "./utils/variables";
-@import "./utils/mixin";
-@import "./utils/placeholders";
-@import "./components/title-hidden";
-@import "./components/logo";
-@import "./components/social-links";
-@import "./components/button";
-@import "./components/backdrop";
-@import "./components/modal-window";
-@import "./components/modal-form";
-@import "./components/mobile-menu";
-@import "./components/current";
-@import "./components/modal-window";
-@import "./layout/header";
-@import "./layout/hero";
-@import "./layout/the-best";
-@import "./layout/we-do";
-@import "./layout/team";
-@import "./layout/customers";
-@import "./layout/portfolio_button";
-@import "./layout/portfolio-card";
-@import "./layout/footer";
+@import './base/common';
+@import './base/container';
+@import './utils/variables';
+@import './utils/mixin';
+@import './utils/placeholders';
+@import './components/title-hidden';
+@import './components/logo';
+@import './components/social-links';
+@import './components/button';
+@import './components/backdrop';
+@import './components/modal-window';
+@import './components/modal-form';
+@import './components/mobile-menu';
+@import './components/current';
+@import './components/modal-window';
+@import './layout/header';
+@import './layout/hero';
+@import './layout/the-best';
+@import './layout/we-do';
+@import './layout/team';
+@import './layout/customers';
+@import './layout/portfolio_button';
+@import './layout/portfolio-card';
+@import './layout/map';
+@import './layout/footer';
