--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,8 +9,8 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../img/hero/bg-hero-mobile.jpg");
-  @include retina(2, 192dpi, "../img/hero/bg-hero-mobile@2x.jpg", 480px);
+    url('../img/hero/bg-hero-mobile.jpg');
+  @include retina(2, 192dpi, '../img/hero/bg-hero-mobile@2x.jpg', 480px);
 
   &__title {
     margin-bottom: 30px;
@@ -19,7 +19,7 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #ffffff;
-    font-size: 26px;
+    font-size: 56px;
     line-height: 1.62;
   }
 
@@ -29,8 +29,8 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/bg-hero-tablet.jpg");
-    @include retina(2, 192dpi, "../img/hero/bg-hero-tablet@2x.jpg", 768px);
+      url('../img/hero/bg-hero-tablet.jpg');
+    @include retina(2, 192dpi, '../img/hero/bg-hero-tablet@2x.jpg', 768px);
   }
 
   @media screen and (min-width: 1200px) {
@@ -46,8 +46,8 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/bg-hero-desk.jpg");
-    @include retina(2, 192dpi, "../img/hero/bg-hero-desk@2x.jpg", 768px);
+      url('../img/hero/bg-hero-desk.jpg');
+    @include retina(2, 192dpi, '../img/hero/bg-hero-desk@2x.jpg', 768px);
   }
 }
 
