--- a/sass/layout/_map.scss
+++ b/sass/layout/_map.scss
@@ -2,34 +2,39 @@
 
 .container-map {
   display: flex;
-  margin: 20px 70px;
-  border-radius: 15px;
+  // margin: 0 auto;
+  justify-content: center;
+  // border-radius: 15px;
 }
 
 .container-map {
   @media screen and (min-width: 320px) {
-    width: 280px;
-    height: 171px;
-    margin-bottom: 16px;
+    // min-width: 180px;
+    height: 100%;
+    // margin-bottom: 16px;
   }
 
   @media screen and (min-width: 768px) {
-    height: 192px;
-    margin-right: 20px;
+    // height: 100%;
+    // margin: 0 auto;
+    // margin-right: 20px;
+    // margin: 0 auto;
   }
   @media screen and (min-width: 1444px) {
     width: 515px;
-    height: 315px;
-    margin-right: 32px;
+    height: 100%;
+    justify-content: center;
+    // margin: 0 auto;
+    // padding: 20px;
   }
 }
 
-/* .contact__map-link {
-  display: block;
-  font-size: 20px;
-}
-.contact__map-iframe {
-  display: block;
-  margin: 0 auto;
-  padding: 20px;
-} */
+// .contact__map-link {
+//   display: block;
+//   font-size: 20px;
+// }
+// .contact__map-iframe {
+//   display: block;
+//   margin: 0 auto;
+//   padding: 20px;
+// }
