--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -19,7 +19,7 @@
     }
   }
   @if $mode == round {
-    @return round($number * $n) / $n;
+    @return calc(round($number * $n) / $n);
   } @else if $mode == ceil {
     @return ceil($number * $n) / $n;
   } @else if $mode == floor {
@@ -44,7 +44,7 @@
   margin-bottom: $mb;
   font-size: $fs;
   font-weight: $fw;
-  line-height: decimal-round($lh/$fs, 2);
+  line-height: decimal-round(calc($lh / $fs), 2);
   letter-spacing: $l-space;
   text-align: $t-align;
   color: $color;
@@ -65,7 +65,9 @@
   margin-bottom: $mb;
   font-size: $fs;
   font-weight: $fw;
-  line-height: decimal-round($lh/$fs, 2);
+  // line-height: decimal-round($lh/$fs, 2);
+  // line-height: calc(round($lh/$fs, 2));
+  line-height: 1.25;
   letter-spacing: $l-space;
   text-transform: $t-transform;
   text-align: $t-align;
@@ -84,7 +86,7 @@
   margin-bottom: $mb;
   font-size: $fs;
   font-weight: $fw;
-  line-height: decimal-round($lh/$fs, 2);
+  line-height: decimal-round(calc($lh / $fs), 2);
   letter-spacing: $l-space;
   text-align: $t-align;
   color: $color;
@@ -103,7 +105,7 @@
   font-size: $fs;
   font-style: $f-st;
   font-weight: $fw;
-  line-height: decimal-round($lh/$fs, 2);
+  line-height: decimal-round(calc($lh / $fs), 2);
   letter-spacing: $l-space;
   text-align: $t-align;
   color: $color;
@@ -113,7 +115,7 @@
 @mixin retina(
   $ratio: 2,
   $dpi: 192dpi,
-  $image: "../img/hero/bg-hero-mobile@2x.jpg",
+  $image: '../img/hero/bg-hero-mobile@2x.jpg',
   $width: 480px
 ) {
   @media screen and (min-device-pixel-ratio: $ratio) and (min-width: $width),
