--- a/css/main.css
+++ b/css/main.css
@@ -936,7 +936,6 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  font-size: 56px;
   line-height: 1.62;
 }
 @media screen and (min-width: 768px) {
@@ -950,6 +949,12 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/bg-hero-tablet@2x.jpg");
   }
 }
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.55;
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero {
     padding: 200px 0;
@@ -957,7 +962,7 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/bg-hero-desk.jpg");
   }
   .hero__title {
-    font-size: 44px;
+    font-size: 56px;
     line-height: 1.55;
   }
 }
